Footer and header tweaks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <span>Internet Across Virginia</span>
+    </mat-toolbar-row>
+</mat-toolbar>
 <div class='page'>
     <app-header></app-header>
     <app-body></app-body>
