--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
-<p>
-  footer works!
-</p>
+<div class="feedback">
+  <mat-form-field>
+    <textarea matInput placeholder="Feedback? Questions? Submit them here:"></textarea>
+  </mat-form-field>
+  <button mat-raised-button color="primary">Submit Feedback</button>
+</div>
