--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,19 +1,7 @@
 header {
-    .banner {
-
-    }
 
     .directions {
-
-    }
-
-    .feedback {
-        width: 600px;
-
-        mat-form-field {
-            width: 100%;
-            textarea {
-            }
-        }
+        font-size: 20px;
+        line-height: 1.4em;
     }
 }
