--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,11 @@
+mat-toolbar {
+
+    mat-toolbar-row {
+    justify-content: center;
+    font-size: 40px;
+    }
+}
+
 .page {
-    margin: 75px 75px 75px 75px;
+    margin: 25px 75px 75px 75px;
 }
