Multiple changes to body

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,3 +1,6 @@
+<div class='Virginia' [style.width.px]="width">
+
+</div>
 <form class="example-form">
     <mat-form-field class="example-full-width">
         <input type="text" placeholder="Select a county" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
@@ -8,4 +11,6 @@
         </mat-autocomplete>
     </mat-form-field>
 </form>
-  
+<div class='firstCountyContainer'>
+    
+</div>
