--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -1,7 +1,11 @@
 svg.state {
     fill: #ccc;
 }
-  
+
+.Virginia {
+    margin: 0 auto 0 auto;
+}
+
 svg.county-border {
     fill: none;
     stroke: #fff;
