--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -4,9 +4,9 @@
 <div class='autocompleteDropdownContainer'>
     <form class="firstCounty-form">
         <mat-form-field>
-            <input type="text" placeholder="Select a county" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+            <input type="text" placeholder="Select a county" aria-label="Number" matInput [formControl]="firstCountyControl" [matAutocomplete]="auto">
             <mat-autocomplete #auto="matAutocomplete">
-                <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                <mat-option *ngFor="let option of firstCountyFilteredOptions | async" [value]="option">
                 {{option}}
                 </mat-option>
             </mat-autocomplete>
@@ -14,9 +14,9 @@
     </form>
     <form class="secondCounty-form">
         <mat-form-field>
-            <input type="text" placeholder="Select another county" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+            <input type="text" placeholder="Select another county" aria-label="Number" matInput [formControl]="secondCountyControl" [matAutocomplete]="auto">
             <mat-autocomplete #auto="matAutocomplete">
-                <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                <mat-option *ngFor="let option of secondCountyFilteredOptions | async" [value]="option">
                 {{option}}
                 </mat-option>
             </mat-autocomplete>
