--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,11 +1,11 @@
-<div class='Virginia' [style.width.px]='stateWidth' [style.height.px]='stateHeight'>
+<div class='Virginia'>
 
 </div>
 <div class='autocompleteDropdownContainer'>
     <form class="firstCounty-form">
         <mat-form-field>
-            <input type="text" placeholder="Select a county" aria-label="Number" matInput [formControl]="firstCountyControl" [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete">
+            <input type="text" placeholder="Select a county" aria-label="Number" matInput [formControl]="firstCountyControl" [matAutocomplete]="firstCountyAutocomplete">
+            <mat-autocomplete #firstCountyAutocomplete="matAutocomplete">
                 <mat-option *ngFor="let option of firstCountyFilteredOptions | async" [value]="option">
                 {{option}}
                 </mat-option>
@@ -14,8 +14,8 @@
     </form>
     <form class="secondCounty-form">
         <mat-form-field>
-            <input type="text" placeholder="Select another county" aria-label="Number" matInput [formControl]="secondCountyControl" [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete">
+            <input type="text" placeholder="Select another county" aria-label="Number" matInput [formControl]="secondCountyControl" [matAutocomplete]="secondCountyAutocomplete">
+            <mat-autocomplete #secondCountyAutocomplete="matAutocomplete">
                 <mat-option *ngFor="let option of secondCountyFilteredOptions | async" [value]="option">
                 {{option}}
                 </mat-option>
@@ -24,16 +24,16 @@
     </form>
 </div>
 <div class='countyComparisonContainer'>
-    <div class='firstCountyContainer' (style.width.px)="firstCountyWidth" (style.height.px)="firstCountyHeight">
+    <div class='firstCountyContainer'>
         
     </div>
     <div class='firstCountyDataContainer'>
         
     </div>
-    <div class='secondCountyContainer'>
+    <div class='secondCountyDataContainer'>
         
     </div>
-    <div class='secondCountyDataContainer'>
+    <div class='secondCountyContainer'>
         
     </div>
 </div>
