Changed color scheme of map and created QuestionCard component

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -37,3 +37,7 @@
         
     </div>
 </div>
+<app-question-card></app-question-card>
+<app-question-card></app-question-card>
+<app-question-card></app-question-card>
+<app-question-card></app-question-card>
