--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,5 @@
 <header class="mat-typography">
   <p class='directions'>
-    Select a county using the map below or by searching using name or zip code 
-    to see how it ranks among other counties in Virginia.
+    Select a county by searching using its name in the dropdowns below the map.
   </p>
 </header>
