Added County data service

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -37,7 +37,27 @@
         
     </div>
 </div>
-<app-question-card></app-question-card>
-<app-question-card></app-question-card>
-<app-question-card></app-question-card>
-<app-question-card></app-question-card>
+<app-question-card 
+    question='Which county has the highest percentage of households with internet access greater than 200 kbps' 
+    leftCountyName='Fauquier County' 
+    rightCountyName='Franklin County' 
+    answer='Fauquier County'>
+</app-question-card>
+<app-question-card 
+    question='Which county has the highest population?'
+    leftCountyName='Fauquier County'
+    rightCountyName='Franklin County'
+    answer='Fauquier County'>
+</app-question-card>
+<app-question-card 
+    question='Which county is closer to Washington D.C?'
+    leftCountyName='Fauquier County' 
+    rightCountyName='Franklin County' 
+    answer='Fauquier County'>
+</app-question-card>
+<app-question-card 
+    question='Which county is rural?'
+    leftCountyName='Fauquier County' 
+    rightCountyName='Franklin County' 
+    answer='Franklin County'>
+</app-question-card>
