--- a/src/app/question-card/question-card.component.html
+++ b/src/app/question-card/question-card.component.html
@@ -1,3 +1,11 @@
-<p>
-  question-card works!
-</p>
+<div class='card'>
+  <div class='leftCounty'></div>
+  <div class='question'>
+    <p>{{question}}</p>
+    <div class='answers'>
+     <button>{{leftCountyName}}</button>
+      <button>{{rightCountyName}}</button>
+    </div>
+  </div>
+  <div class='rightCounty'></div>
+</div>
