Question card component changes

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -38,7 +38,7 @@
     </div>
 </div>
 <app-question-card 
-    question='Which county has the highest percentage of households with internet access greater than 200 kbps' 
+    question='Which county has the highest percentage of households with internet access greater than 200 kbps?' 
     leftCountyName='Fauquier County' 
     rightCountyName='Franklin County' 
     answer='Fauquier County'>
@@ -56,7 +56,7 @@
     answer='Fauquier County'>
 </app-question-card>
 <app-question-card 
-    question='Which county is rural?'
+    question='Which county is more rural?'
     leftCountyName='Fauquier County' 
     rightCountyName='Franklin County' 
     answer='Franklin County'>
