--- a/src/app/question-card/question-card.component.scss
+++ b/src/app/question-card/question-card.component.scss
@@ -12,13 +12,17 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        text-align: center;
+        text-align-last: center;
+        width: 30%;
+        font-size: 30px;
+        line-height: 1.2em;
 
         .answers {
-            display: flex;
-            justify-content: space-evenly;
+            font-size: 16px;
 
-            button {
-                width: 100%;
+            .answer {
+                width: 50%;
             }
         }
     }
