--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="mat-typography">
   <p class='directions'>
-    Select a county by searching using its name in the dropdowns below the map.
+    Select a county by searching using its name in the dropdowns below the map. Use this information to help you answer the questions below.
   </p>
 </header>
