--- a/src/app/question-card/question-card.component.html
+++ b/src/app/question-card/question-card.component.html
@@ -3,9 +3,10 @@
   <div class='question'>
     <p>{{question}}</p>
     <mat-button-toggle-group class='answers' name="fontStyle" aria-label="Font Style">
-      <mat-button-toggle class='answer'>{{leftCountyName}}</mat-button-toggle>
-      <mat-button-toggle class='answer'>{{rightCountyName}}</mat-button-toggle>
-    </mat-button-toggle-group>    
+      <mat-button-toggle class='answer' (click)="answerQuestion(leftCountyName)">{{leftCountyName}}</mat-button-toggle>
+      <mat-button-toggle class='answer' (click)="answerQuestion(rightCountyName)">{{rightCountyName}}</mat-button-toggle>
+    </mat-button-toggle-group> 
+    {{ correct }}
   </div>
   <div class='rightCounty'></div>
 </div>
