--- a/src/app/question-card/question-card.component.scss
+++ b/src/app/question-card/question-card.component.scss
@@ -20,6 +20,7 @@
 
         .answers {
             font-size: 16px;
+            margin-bottom: 20px;
 
             .answer {
                 width: 50%;
