removed console.log statements

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="mat-typography">
   <p class='directions'>
     Select a county by searching using its name in the dropdowns below the map. Use this information to help you answer the questions below.
+    You can also hover over the map below to see internet speeds across Virginia.
   </p>
 </header>
