Added uniqueID to question card so counties are drawn within their own cards

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,28 +1,32 @@
-<div class='Virginia'>
-
-</div>
 <app-question-card 
     question='Which county has the highest percentage of households with internet access greater than 200 kbps?' 
     leftCountyName='Fauquier County' 
     rightCountyName='Franklin County' 
-    answer='Fauquier County'>
+    answer='Fauquier County'
+    uniqueID='1'>
 </app-question-card>
 <app-question-card 
     question='Which county has the highest population?'
     leftCountyName='Fauquier County'
     rightCountyName='Franklin County'
-    answer='Fauquier County'>
+    answer='Fauquier County'
+    uniqueID='2'>
 </app-question-card>
 <app-question-card 
     question='Which county is closer to Washington D.C?'
     leftCountyName='Fauquier County' 
     rightCountyName='Franklin County' 
-    answer='Fauquier County'>
+    answer='Fauquier County'
+    uniqueID='3'>
 </app-question-card>
 <app-question-card 
     question='Which county is more rural?'
     leftCountyName='Fauquier County' 
     rightCountyName='Franklin County' 
-    answer='Franklin County'>
+    answer='Franklin County'
+    uniqueID='4'>
 </app-question-card>
 <app-county-comparison-card></app-county-comparison-card>
+<div class='Virginia'>
+
+</div>
