--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,13 @@
 <header class="mat-typography">
   <p class='directions'>
-    Select a county by searching using its name in the dropdowns below the map. Use this information to help you answer the questions below.
-    You can also hover over the map below to see internet speeds across Virginia.
+    By answering the questions below we hope to bring to your attention some of the differences between counties in Virginia
+    and how that relates to the accessibility of Internet within those counties as well as the quality of the Internet
+    in those counties. 
+  </p>
+  <p class='directions'>
+    Below these questions you will find a tool that can be used to look up individual counties and compare them against others
+    from Virginia. Feel free to use this to answer the questions we have given you or test your knowledge without your use of
+    the tool!
   </p>
 </header>
+<hr>
