--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,7 +1,11 @@
 header {
+    margin-bottom: 20px;
     
     .directions {
-        font-size: 20px;
+        font-size: 24px;
         line-height: 1.4em;
+        justify-content: center;
+        text-align: center;
+        text-align-last: center;
     }
 }
