Updated question card, various styling tweaks

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,4 @@
-<app-question-card 
+<!-- <app-question-card 
     question='Which county has the highest percentage of households with internet access greater than 200 kbps?' 
     leftCountyName='Fauquier County' 
     rightCountyName='Franklin County' 
@@ -25,7 +25,8 @@
     rightCountyName='Franklin County' 
     answer='Franklin County'
     uniqueID='4'>
-</app-question-card>
+</app-question-card> -->
+<app-question-card></app-question-card>
 <app-county-comparison-card></app-county-comparison-card>
 <div class='Virginia'>
 
