--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
   </p>
   <p class='directions'>
     Below these questions you will find a tool that can be used to look up individual counties and compare them against others
-    from Virginia. Feel free to use this to answer the questions we have given you or test your knowledge without your use of
+    from Virginia. Feel free to use this to answer the questions we have given you or test your knowledge without the use of
     the tool!
   </p>
 </header>
