--- a/src/app/county-comparison-card/county-comparison-card.component.scss
+++ b/src/app/county-comparison-card/county-comparison-card.component.scss
@@ -1,5 +1,7 @@
 .countyComparisonCard {
     margin: 20px 0 20px 0; 
+    border: solid 1px black;
+    padding: 10px;
 
     .autocompleteDropdownContainer {
         display: flex;
@@ -11,6 +13,12 @@
 
         mat-form-field {
             width: 80%;
+        }
+    }
+
+    .secondCounty-form {
+        mat-form-field {
+            float: right;
         }
     }
 
