Added donation links to footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,3 +4,23 @@
   </mat-form-field>
   <button mat-raised-button color="primary">Submit Feedback</button>
 </div>
+<hr>
+<div class="donationLinks mat-typography">
+  The organizations below hope to reduce or eliminate the divide in Internet Accessibility found between rural and 
+  urban America.
+  <div class='donationContainer'>
+    <span class='organization'>Institute for Local Self-Reliance (ILSR)</span>
+    <a class='donationInfo' href='https://ilsr.org/broadband/'><button mat-raised-button >INFO</button></a>
+    <a class='donationLink' href='https://ilsr.org/donate/' target="_blank"><button mat-raised-button>DONATE</button></a>
+  </div>
+  <div class='donationContainer'>
+    <span class='organization'>Public Knowledge</span>
+    <a class='donationInfo' href='https://www.publicknowledge.org/issues/rural-broadband-access'><button mat-raised-button >INFO</button></a>
+    <a class='donationLink' href='https://www.publicknowledge.org/give/' target="_blank"><button mat-raised-button>DONATE</button></a>
+  </div>
+  <div class='donationContainer'>
+    <span class='organization'>Connect Americans Now (CAN)</span>
+    <a class='donationInfo' href='https://connectamericansnow.com/'><button mat-raised-button >INFO</button></a>
+    <a class='donationLink' href='http://connectamericansnow.com/take-action/' target="_blank"><button mat-raised-button>TAKE ACTION</button></a>
+  </div>
+</div>
