--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,15 +1,35 @@
 .feedback {
     width: 100%;
+    margin: 20px 0 20px 0;
 
     mat-form-field {
         width: 100%;
-        textarea {
-
-        }
     }
 
     button {
          width: 100%;
          height: 40px;
+    }
+}
+
+.donationLinks {
+    margin-top: 20px;
+    font-size: 20px;
+
+    .donationContainer {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        margin: 20px 0 20px 0;
+        
+        .organization {
+            font-size: 16px;
+            margin-right: 20px;
+            width: 400px;
+        }
+
+        .donationInfo {
+            margin-right: 20px;
+        }
     }
 }
