--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,33 +1,24 @@
-<!-- <app-question-card 
-    question='Which county has the highest percentage of households with internet access greater than 200 kbps?' 
-    leftCountyName='Fauquier County' 
-    rightCountyName='Franklin County' 
-    answer='Fauquier County'
-    uniqueID='1'>
-</app-question-card>
-<app-question-card 
-    question='Which county has the highest population?'
-    leftCountyName='Fauquier County'
-    rightCountyName='Franklin County'
-    answer='Fauquier County'
-    uniqueID='2'>
-</app-question-card>
-<app-question-card 
-    question='Which county is closer to Washington D.C?'
-    leftCountyName='Fauquier County' 
-    rightCountyName='Franklin County' 
-    answer='Fauquier County'
-    uniqueID='3'>
-</app-question-card>
-<app-question-card 
-    question='Which county is more rural?'
-    leftCountyName='Fauquier County' 
-    rightCountyName='Franklin County' 
-    answer='Franklin County'
-    uniqueID='4'>
-</app-question-card> -->
 <app-question-card></app-question-card>
 <app-county-comparison-card></app-county-comparison-card>
-<div class='Virginia'>
-
+<div class='Virginia'></div> <!-- Container for map drawn with d3.js -->
+<div class='dataSelectionContainer mat-typography'>
+    <p>Select what data to display in the map above</p>
+    <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+        <mat-button-toggle
+            (click)='updateStateMap("percentHouseholds")'>
+            Percentage of households with Internet greater than 200 kbps
+        </mat-button-toggle>
+        <mat-button-toggle
+            (click)='updateStateMap("downloadSpeed")'>
+            Average download speed in mbps
+        </mat-button-toggle>
+        <mat-button-toggle
+            (click)='updateStateMap("percentRural")'>
+            Percentage of population that lives in rural setting
+        </mat-button-toggle>
+        <mat-button-toggle
+            (click)='updateStateMap("population")'>
+            Population
+        </mat-button-toggle>
+    </mat-button-toggle-group>
 </div>
