--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -7,3 +7,13 @@ svg.VirginiaMap {
     margin: 0 auto 0 auto;
     border: solid 1px black;
 }
+
+.dataSelectionContainer {
+    text-align: center;
+
+    p {
+        margin-bottom: 5px;
+        margin-top: 10px;
+        font-size: 16px;
+    }
+}
